change grid css which broke to avoid using overflow hidden

--- a/FBOLinx.Web/FBOLinx.Web/ClientApp/src/app/pages/group-analytics/group-analytics-home/group-analytics-home.component.scss
+++ b/FBOLinx.Web/FBOLinx.Web/ClientApp/src/app/pages/group-analytics/group-analytics-home/group-analytics-home.component.scss
@@ -31,14 +31,6 @@
     }
 }
 
-::ng-deep {
-    .group-analytics-dialog {
-        .mat-dialog-container {
-            padding: 0;
-        }
-    }
-}
-
 .after-breadcrumb {
     padding-top: 4rem;
 }
